add_library(host
  Account.cpp
  Accounts.cpp
  Beanstalk.cpp
  Bitbucket.cpp
  GitHub.cpp
  GitLab.cpp
  Repository.cpp
)

target_link_libraries(host
  conf
  cred
  Qt6::Core
  Qt6::Gui
  Qt6::Network
)

target_compile_definitions(host PRIVATE
  GITHUB_CLIENT_ID="${GITHUB_CLIENT_ID}"
  GITHUB_CLIENT_SECRET="${GITHUB_CLIENT_SECRET}"
)

set_target_properties(host PROPERTIES
  AUTOMOC ON
)
